# FastEddy-model

./: CMakeLists.txt
SRC/FECUDA/: fecuda_Device.cu  fecuda_Device_cu.h  fecuda_PlugIns.cu  fecuda_Utils.cu  fecuda_Utils_cu.h
SRC/GRID/CUDA/: cuda_gridDevice.cu  cuda_gridDevice_cu.h
SRC/HYDRO_CORE/CUDA/: cuda_BCsDevice.cu  cuda_BCsDevice_cu.h  cuda_BaseStateDevice.cu  cuda_advectionDevice.cu  cuda_advectionDevice_cu.h  cuda_buoyancyDevice.cu  cuda_buoyancyDevice_cu.h  cuda_coriolisDevice.cu  cuda_coriolisDevice_cu.h  cuda_filtersDevice.cu  cuda_filtersDevice_cu.h  cuda_hydroCoreDevice.cu  cuda_hydroCoreDevice_cu.h  cuda_largeScaleForcingsDevice.cu  cuda_largeScaleForcingsDevice_cu.h  cuda_moistureDevice.cu  cuda_moistureDevice_cu.h  cuda_molecularDiffDevice.cu  cuda_molecularDiffDevice_cu.h  cuda_pressureDevice.cu  cuda_pressureDevice_cu.h  cuda_rayleighDampingDevice.cu  cuda_rayleighDampingDevice_cu.h  cuda_sgsTurbDevice.cu  cuda_sgsTurbDevice_cu.h  cuda_sgstkeDevice.cu  cuda_sgstkeDevice_cu.h  cuda_surfaceLayerDevice.cu  cuda_surfaceLayerDevice_cu.h
SRC/IO/: io.c  io.h  io_binary.c  io_binary.h  io_netcdf.c  io_netcdf.h
